k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: singalong
  namespace: karaoke
  labels:
    app: singalong
spec:
  type: ClusterIP
  selector:
    app: singalong
  ports:
    - name: http
      port: 80
      targetPort: http
